--- a/Sistema de Armazenamento de Questões/appsettings.json
+++ b/Sistema de Armazenamento de Questões/appsettings.json
@@ -6,7 +6,7 @@
         }
     },
     "ConnectionStrings": {
-        "DataBase": "Server=DIOGO_COSTA107;Database=DB_StorageQuestions;User Id=diogo.costa;Password=12345678;TrustServerCertificate=True;Connection Timeout=60"
+        "DataBase": "Server=DIOGO_COSTA107;Database=DB_StorageQuestions;User Id=diogo.costa;Password=Diogo9257;TrustServerCertificate=True;Connection Timeout=60"
     },
     "AllowedHosts": "*"
 }
