--- a/Sistema de Armazenamento de Questões/Sistema de Armazenamento de Questões.csproj
+++ b/Sistema de Armazenamento de Questões/Sistema de Armazenamento de Questões.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="iTextSharp" Version="5.5.13.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0">
       <PrivateAssets>all</PrivateAssets>
@@ -22,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Update="Views\Home\QuestionDisplay.cshtml">
+    <Content Update="Views\Questions\QuestionDisplay.cshtml">
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
